labo11/destinationrule.yaml
# 公式ドキュメントに載ってて動作検証用に適用したやつ
# https://istio.io/latest/docs/tasks/traffic-management/circuit-breaking/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  trafficPolicy:
    connectionPool: # 検証
      http:
        h2UpgradePolicy: UPGRADE
